[metadata]
name = phylomito
version = 0.1.0
author = Igor Rodrigues da Costa
author_email = igor.bioinfo@gmail.com
description = Supermatrix phylogenetics using complete mitochondrial genomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorrcosta/phylomito
Bug Tracker = https://github.com/igorrcosta/phylomito/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = phylomito
package_dir =
    = src
    python_requires = >=3.6
install_requires =
    biopython
    anytree
include_package_data = True 

[options.packages.find]
where = src

[options.package_data] 
phylomito = data/mitochondria_tree, data/organism_taxid, data/taxid_to_filenames

[options.entry_points]
console_scripts =
    phylomito = phylomito.phylomito:main
    mt_download = phylomito.mt_download:main
